[package]
name = "rocket_crud"
version = "0.1.0"
authors = ["Ralf Northman <ralf.northman@bredband.net>"]

[dependencies]
diesel = { version = "1.3.3", features = ["mysql"] }
rocket = "0.4.0-rc.2"
dotenv = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.0-rc.2"
default-features = false
features = ["diesel_mysql_pool"]
