[package]
name = "diesel_rocket"
version = "0.1.0"
authors = ["Ralf Northman <ralf.northman@bredband.net>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["mysql"] }
rocket = "0.4.5"
dotenv = "0.15.0"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
rocket_cors = "0.5.2"
chrono = "0.4.15"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_mysql_pool", "json"]
